rns-lang/tests/snapshots/lexer-integers-invalid_format_letters.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public Test
.limit 123abc

----- STDOUT -----

----- STDERR -----
Error: lexing error
   ╭─[ tests/testdata/lexer/integers/invalid_format_letters.ja:2:8 ]
   │
 2 │ .limit 123abc
   │        ───┬──  
   │           ╰──── '123abc' is not a valid integer
   │ 
   │ Note: Expected a valid integer number.
───╯
